# dotmac_crm

./: .agent-run.sh  .aider.input.history  .bandit  .dockerignore  .env.agent-swarm  .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dotmac Customer internet usage.xlsx  Dotmac Customers list (3).csv  Internet plan usagey.xlsx  Makefile  Now you should run  docker-compose.test.yml  docker-compose.yml  final_normalized_1129_rows.xlsx  final_normalized_1129_rows_v2.xlsx  final_normalized_1129_rows_v3.xlsx  final_normalized_1129_rows_v31.xlsx  mypy.ini  mypy.txt  normalized base station names.xlsx  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.json
.seabone/: MEMORY.md  SOUL.md  backlog.json  ci-state.json  completed-tasks.json  conflict-state.json  docs-state.json  last-report.txt  loop-state.json  model-memory.json  orchestrator-state.json  pm-state.json
.worktrees/: ci_mech_report.tsv  ci_mech_report_full.tsv  ci_triage.tsv
alembic/: env.py
app/: auth_exceptions.py  celery_app.py  celery_scheduler.py  config.py  container.py  csrf.py  db.py  errors.py  logging.py  main.py  metrics.py  monitoring.py  observability.py  telemetry.py  version.py  web_home.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md  crm-response-obligations.md  design-guide.html  field-app-scope.md  splynx-selfcare-convergence.md  technician-coordination.md  ui-ux-audit-2026-03-04-wave1.md  work-lifecycle.md
mobile/: README.md  pubspec.yaml
reports/: contact_cleanup_conflicts.csv  reseller_email_affected_customers.csv
scripts/: agent_user_results.csv  agent_users.csv  backfill_billing_modes.py  backfill_conversation_metrics.py  backfill_conversation_summaries.py  backfill_meta_social_identity.py  backfill_numbering.py  backfill_person_channels.py  backfill_person_selfcare_id.py  backfill_whatsapp_contacts.py  bulk_create_agent_users.py  bulk_create_helpdesk_users.py  bulk_create_technicians.py  bulk_import_inventory.py  bump_version.py  check_ai_provider_health.py  check_mcp_db.py  check_version_bump.py  ci_test_shard.py  cleanup_contacts_from_csv.py  db_backup.sh  db_sync_to_staging.sh  dedup_splynx_subscribers.py  deploy.sh  fix_button_radius.py  fix_chatwoot_import.py  fix_table_headers.py  generate_schema_skill.py  helpdesk_user_results.csv  helpdesk_users.csv  import_fiber_kmz.py  init-openbao.sh  merge_duplicate_persons.py  migrate_confirm_buttons.py  migrate_submit_buttons.py  seed_admin.py  (+22 more)
(+2051 files in other folders)
