[tool.poetry]
name = "dotmac_crm"
version = "0.1.0"
description = "Subscriber management API and web UI"
authors = ["Codex <codex@local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
jinja2 = "3.1.4"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-instrumentation-sqlalchemy = "0.47b0"
opentelemetry-instrumentation-celery = "0.47b0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyotp = "2.9.0"
cryptography = "42.0.8"
paramiko = "3.4.1"
ncclient = "0.6.15"
routeros-api = "0.17.0"
pyrad = "2.4"
geoalchemy2 = "0.14.7"
shapely = "2.0.4"
weasyprint = "61.2"
pydyf = "0.10.0"
aiosmtpd = "1.4.6"
sse-starlette = "^1.6.0"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
playwright = "1.46.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.1"
ruff = "^0.9.0"
bandit = "^1.7.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (catch stray print statements)
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from inside except (too noisy in service layer)
    "SIM108", # use ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "F401"]  # migrations have long lines and unused imports
"tests/**/*.py" = ["T20"]                    # allow print in tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
